<resources>
    <string name="app_name">sos</string>
    <string name="action_settings">Settings</string>
    <string name="emergency_contact">紧急联络人</string>
    <string name="My_first_aid_card">我的急救卡</string>
    <string name="Rescue_information">救援信息</string>
    <string name="List_for_help">求救列表</string>
    <string name="system_stttings">系统设置</string>
    <string name="emergency_call">紧急电话</string>
    <string name="A_key_for_help">一键求救</string>
    <string name="first_aid_knowledge">急救知识</string>
    <string name="SOS">SOS 紧急求救</string>
    <string name="username">   </string>
    <string name="usersfzh">身份证号</string>
    <string name="userjtdz">家庭地址</string>
    <string name="userxx">血型</string>
    <string name="usergmfy">过敏反应</string>
    <string name="userzdy">自定义</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="First_aid_tips">以便救援人员能及时帮助您脱离危险</string>
    <string name="hint">及时更新您的急救卡</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="sfzhm">身份证号码</string>
    <string name="Uname">您的名字</string>
    <string name="ndzz">你的住址</string>
    <string name="ndxx">您的血型</string>
    <string name="gmfyh">对什么药物过敏</string>
    <string name="zdyh">您想对急救人员知道的其他事项</string>
    <string name="time">安全度过</string>
    <string name="tqjb">极端天气警报</string>
    <string name="zrzhjb">自然灾害警报</string>
    <string name="yqjb">疫情警报</string>
    <string name="zbxqjb">周边险情警报</string>
    <string name="xttz">系统通知</string>
    <string name="update">版本更新</string>
    <string name="smddjb">睡眠地震警报</string>
    <string name="hidedk">打开后将开启对应功能</string>
    <string name="hidedd">开启后出现疑似地震震动将发出警报</string>
    <string name="StopMusic">停止警报</string>
    <string name="userlogout">注销</string>
    <string name="l_user">用户名</string>
    <string name="l_password">密码</string>
    <string name="l_password2">确认密码</string>
    <string name="l_findpd">密钥</string>
    <string name="login">注册</string>
    <string name="logon">登录</string>
    <string name="miyao"> 找回密码的凭证</string>
    <string name="userxieyi">点击注册即同意《法律声明和隐私策略》</string>


</resources>
