<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorcall_text">


    <Button
        android:id="@+id/bback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorcall_text"
        android:text="@string/back"
        android:textColor="@color/Headline_text" />

    <TextView
        android:id="@+id/Headline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/SOS"
        android:textColor="@color/Headline_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bsave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorcall_text"
        android:text="@string/save"
        android:textColor="@color/Headline_text" />


</LinearLayout>