<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <!--顶部按钮-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <ImageButton
            android:id="@+id/call_phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/emergency_call"
            app:srcCompat="@mipmap/phone" />

        <ImageButton
            android:id="@+id/help_call_phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/A_key_for_help"
            app:srcCompat="@mipmap/help" />

        <ImageButton
            android:id="@+id/emergency_contact2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/emergency_contact"
            app:srcCompat="@mipmap/knowledge" />
    </LinearLayout>




    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />


    <TextView
        android:id="@+id/position_textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--底部按钮-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/call_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorcalll_phone"
            android:contentDescription="@string/emergency_call"
            app:srcCompat="@mipmap/phone" />

        <ImageButton
            android:id="@+id/SMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorcalll_phone"
            android:contentDescription="@string/A_key_for_help"
            app:srcCompat="@mipmap/help" />

        <ImageButton
            android:id="@+id/emergency_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorcalll_phone"
            android:contentDescription="@string/emergency_contact"
            app:srcCompat="@mipmap/knowledge" />
    </LinearLayout>


</LinearLayout>